--- a/templates/admin/admin_new_structure.html.twig
+++ b/templates/admin/admin_new_structure.html.twig
@@ -9,8 +9,10 @@
 {% endblock%}
 
 {% block javascripts %}
+    {{ parent() }}
     {{ encore_entry_script_tags('adminNavBar') }}
     {{ encore_entry_script_tags('formAdd') }}
+
 {% endblock%}
 
 {% block body %}
