--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,11 +30,15 @@
     {% endfor %}
     {% for message in app.flashes('danger') %}
         <div class="flash-danger-messages">
-            <div class="flash-message-danger"></div>
+            <div class="flash-message-danger"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#e74c3c" class="bi bi-exclamation-circle-fill" viewBox="0 0 16 16">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                </svg></div>
             <p class="flash-danger-content">
                 {{ message }}
             </p>
-            <div class="flash-message-close"></div>
+            <div class="flash-message-close"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000000" class="bi bi-x" viewBox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                </svg></div>
         </div>
     {% endfor %}
 
