--- a/assets/styles/formAdd.scss
+++ b/assets/styles/formAdd.scss
@@ -61,6 +61,10 @@ form{
 
 }
 
+.form-control{
+  font-size: .9rem;
+}
+
 input::placeholder{
   font-size: .9rem;
 }
@@ -78,6 +82,12 @@ input::placeholder{
     background-color: #27ae60;
     border: solid 1px #27ae60;
     color: white;
+  }
+
+  &:focus{
+    background-color: #27ae60;
+    color: white;
+    border: solid 1px #27ae60;
   }
 }
 
