--- a/templates/security/edit_pass.html.twig
+++ b/templates/security/edit_pass.html.twig
@@ -1,14 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Fitness Club - Récupération de mot de passe{% endblock %}
+{% block title %}Fitness Club - Modification du mot de passe{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('build/login.css') }}">
+
+{% endblock%}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('newPass') }}
+{% endblock%}
 
 {% block body %}
-<h1>Modifier mot de passe</h1>
-    <div>
+<div class="page-container">
+    <div class="form-container">
+        <div class="logo-img"></div>
+        <form method="post">
+            <h2>Modifier le mot de passe</h2>
         {{ form_start(editPassForm) }}
-        {{ form_row(editPassForm.plainPassword) }}
-
-        <button type="submit" class="btn">Enregistrer</button>
+            <div class="form-inputs">
+                {{ form_row(editPassForm.plainPassword) }}
+            </div>
+            <button type="submit" class="mainForm-btn">Enregistrer</button>
         {{ form_end(editPassForm) }}
+        </form>
     </div>
+</div>
 {% endblock %}
+
