--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -19,7 +19,7 @@
 <div class="main-container">
     <div class="dashboard-content">
         <div class="dashboard-title">
-        <h3>Tableau de bord</h3>
+        <h2>Tableau de bord</h2>
         <!--<div class="dashboard-border"></div>-->
         </div>
         <div class="dashboard-sections">
@@ -213,7 +213,7 @@
 
                 </div>
                 <div class="stats-card">
-                    <h6>Nombre moyen de structures par partenaires :</h6>
+                    <h6>Nombre moyen de structures par partenaire :</h6>
                     <div class="dashboard-border no-margin"></div>
                     {% set nbStr = structures|length %}
                     {% set nbPart = partners|length %}
