--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -213,7 +213,7 @@
 
                 </div>
                 <div class="stats-card">
-                    <h6>Nombre moyen de structures par partenaire :</h6>
+                    <h6>Moyenne de structures par partenaire :</h6>
                     <div class="dashboard-border no-margin"></div>
                     {% set nbStr = structures|length %}
                     {% set nbPart = partners|length %}
