--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -9,19 +9,34 @@
 }
 
 h2{
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
+  color: #3585bb;
+  text-align: center;
   font-weight: 600;
-  margin-top: 1rem;
+  font-size: 1.2rem;
+  width: 100%;
+  border: solid 1px lightgray;
+  margin: 1rem auto;
+  background-color: hsla(0deg, 0%, 100%, 0.92);
+  border-radius: 7px;
+  padding: 1rem 3rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
 }
 
 
 h3{
-  color: #2c70a0;
+  color: #225577;
   font-weight: 600;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   margin-bottom: 1.5rem;
 }
+
+h4{
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #112b3c;
+}
+
 
 .permissions-div{
   display: flex;
@@ -54,15 +69,13 @@ h3{
 }
 
 .white-card{
-  background-color: white;
   border: solid 1px lightgray;
-  padding: 1rem 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
+  background-color: hsla(0deg, 0%, 100%, 0.92);
+  border-radius: 7px;
+  padding: 1rem 3rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
-  &:hover{
-    box-shadow: 0 0 10px 2px lightgray;
-
-  }
 
 }
 
@@ -94,9 +107,10 @@ h3{
     flex-direction: row;
     align-items: start;
 
-    a{
+    .bouton{
       margin-left: .5rem;
       text-decoration: none;
+      width: 7rem;
     }
   }
 }
@@ -134,6 +148,7 @@ h3{
   border: 1px solid #888;
   display: flex;
   flex-direction: column;
+  border-radius: 7px;
 
   .closing {
 
@@ -149,6 +164,10 @@ h3{
 
   .modal-p{
     padding: 1.5rem 0;
+
+    p{
+      font-size: .9rem;
+    }
   }
 
   .modal-buttons-div{
@@ -158,8 +177,15 @@ h3{
     justify-content: end;
 
 
+    a{
+      margin-left: .5rem;
+      width: 7rem;
+      text-align: center;
+    }
+
     button{
       margin-left: .5rem;
+      width: 7rem;
     }
 
   }
@@ -181,7 +207,7 @@ h3{
 }
 
 #my-accordion{
-  padding: 0 2rem;
+  padding: 0 3rem;
   width: 100%;
 }
 
@@ -201,9 +227,9 @@ h3{
   padding: 1rem 0;
 
   span{
-    color: #2c70a0;
+    color: #225577;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     padding-bottom: .3rem;
     padding-left: 0;
   }
@@ -237,6 +263,8 @@ h3{
   margin-top: 1rem;
   margin-bottom: 0;
   color: gray;
+  font-size: .8rem;
+  font-weight: 700;
 }
 
 .structures-none{
@@ -318,13 +346,18 @@ h3{
 
 .return-btn{
   display: block;
-  margin-bottom: 1rem;
-  padding: .5rem 1rem;
+  margin-bottom: 0;
+  padding: .4rem 1rem;
+  padding-bottom: .5rem;
   text-decoration: none;
   color: #0a1e2a;
+  font-size: .9rem;
   border: solid 1px lightgray;
   width: fit-content;
-  background-color: white;
+  background-color: hsla(0deg, 0%, 100%, 0.92);
+  border-radius: 7px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
 
 
   &:hover{
@@ -340,18 +373,65 @@ h3{
     border-radius: 17px;
 
 
+    &:disabled{
+      background-color: #5eb8fd;
+      border-color: #5eb8fd;
+
+      &:hover{
+        background-color: #5eb8fd;
+        border-color: #5eb8fd;
+      }
+    }
 }
 
 .bouton-bleu{
   color: white;
-  background-color: #e9c949;
-  border: solid 1px #e9c949;
+  background-color: #1B9CFC;
+  border: solid 1px #1B9CFC;
 
   &:hover{
-    background-color: #e3bb1c;
+    background-color: #0382e2;
+    border-color: #0382e2;
 
   }
 
+}
+
+.bouton-vert{
+  color: white;
+  background-color: #2ecc71;
+  border: solid 1px #2ecc71;
+
+  &:hover{
+    background-color: #25a259;
+    border-color: #25a259;
+
+  }
+
+}
+
+.bouton-rouge{
+  color: white;
+  background-color: #ff4757;
+  border: solid 1px #ff4757;
+
+  &:hover{
+    background-color: #ff2436;
+    border-color: #ff2436;
+
+  }
+}
+
+.bouton-rouge-b{
+  color: #ff4757;
+  background-color: white;
+  border: solid 1px #ff4757;
+
+  &:hover{
+    background-color: #ff2436;
+    color: white;
+    border-color: #ff2436;
+  }
 }
 
 a{
@@ -363,13 +443,14 @@ a{
 }
 
 .bouton-bleu-b{
-  color: #e9c949;
+  color: #1B9CFC;
   background-color: white;
-  border: solid 1px #e9c949;
+  border: solid 1px #1B9CFC;
 
   &:hover{
-    background-color: #e3bb1c;
+    background-color: #0382e2;
     color: white;
+    border-color: #0382e2;
   }
 }
 
@@ -382,11 +463,15 @@ a{
 
 
 .form-check-input:checked {
-  background-color: #4c99cd;
-  border-color: #4c99cd;
+  background-color: #1B9CFC;
+  border-color: #1B9CFC;
 }
 
 @media screen and (max-width: 992px) {
+
+  .main-container{
+    padding: 3rem 2rem;
+  }
 
   .main-container{
     display: flex;
@@ -408,10 +493,7 @@ a{
   }
 
 
-  .permissions-div .form-permissions button{
-    width: 100%;
-    margin-top: 2rem;
-  }
+
 
   .permissions-div{
     width: 100%;
@@ -425,6 +507,10 @@ a{
 }
 
 @media screen and (max-width: 680px){
+  .main-container{
+    padding: 1rem;
+  }
+
   .infos-div{
     width: 100%;
     flex-direction: column;
@@ -446,18 +532,39 @@ a{
       margin-left: 0;
       text-align: center;
     }
+
+    .bouton-rouge{
+      width: 100%;
+      margin-bottom: .5rem;
+    }
+
+    .bouton-rouge-b{
+      width: 100%;
+      margin-left: 0;
+      text-align: center;
+    }
+    .bouton-vert{
+      width: 100%;
+      margin-bottom: .5rem;
+    }
+
+
+  }
+  .infos-div .partner-btns .bouton {
+    margin-left: 0rem;
   }
 
 
-
+  .permissions-div .form-permissions button{
+    width: 100%;
+    margin-top: 2rem;
+  }
 
 }
 
 @media screen and (max-width: 576px) {
 
-  .main-container{
-    padding: 1rem;
-  }
+
 
   .infos-div{
     width: 100%;
@@ -479,14 +586,6 @@ a{
     width: 100%;
     margin-top: 2rem;
   }
-
-  .my-accordion{
-
-    span{
-      font-size: 1.5rem;;
-    }
-  }
-
 
 
   .modal-buttons{
