--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -516,6 +516,15 @@ a{
     flex-direction: column;
   }
 
+  #my-accordion{
+    padding: 0 1rem;
+
+  }
+
+  .white-card{
+    padding: 1rem ;
+  }
+
   .infos-div .partner-btns{
 
     width: 100%;
