--- a/templates/admin/admin_show_partner.html.twig
+++ b/templates/admin/admin_show_partner.html.twig
@@ -79,8 +79,8 @@
             <p>Etes-vous sûr de vouloir modifier les permissions globales du partenaire? </p>
             </div>
             <div class="modal-buttons-div">
-                <button class="bouton cancel-mod">Annuler</button>
-                <button class="bouton btn-confirm" id="confirm-btn">Confirmer</button>
+                <button class="bouton bouton-bleu-b cancel-mod">Annuler</button>
+                <button class="bouton bouton-bleu btn-confirm" id="confirm-btn">Confirmer</button>
             </div>
         </div>
     </div>
