--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -29,12 +29,21 @@ h3{
   font-weight: 600;
   font-size: 1.1rem;
   margin-bottom: 1.5rem;
+
+  span{
+    text-transform: uppercase;
+  }
+
 }
 
 h4{
   font-size: 1.2rem;
   font-weight: 600;
   color: #112b3c;
+}
+
+p{
+  font-size: .9rem;
 }
 
 
@@ -368,9 +377,11 @@ h4{
 
 .bouton{
     border: none;
-    line-height: 1.8rem;
+    line-height: 1.6rem;
     padding: .05rem 1.1rem;
     border-radius: 17px;
+    font-size: .9rem;
+    text-align: center;
 
 
     &:disabled{
