--- a/assets/styles/partners.scss
+++ b/assets/styles/partners.scss
@@ -18,7 +18,7 @@ h2{
 }
 
 #gym-bg{
-  background-color: #1abc9c /*#16a085*/;
+  background-color: #4c99cd /*#16a085*/;
 }
 
 .number-structure{
@@ -111,9 +111,8 @@ select{
     background-color: #4c99cd /*#e6e6e6*/;
     position: relative;
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: center;
-    padding-bottom: 1rem;
     border-radius: 15px 0 0 15px ;
 
 
