--- a/assets/styles/read.scss
+++ b/assets/styles/read.scss
@@ -1,6 +1,6 @@
 .main-container {
 
-  background: linear-gradient(to right, #243B55, #141E30);
+  background: linear-gradient(to right, #183a54, #0b1c28);
   /*background-color: #112B3C;*/
   position: absolute;
   top: 8vh;
