--- a/templates/admin/admin_show_structures.html.twig
+++ b/templates/admin/admin_show_structures.html.twig
@@ -21,7 +21,7 @@
     <div class="filter-bar">
         <h2>Liste des structures</h2>
         <div class="search-bar">
-        <input type="text" class="form-control" id="search-bar" placeholder=" Rechercher un partenaire...">
+        <input type="text" class="form-control" id="search-bar" placeholder=" Saisissez l'adresse ou le nom du partenaire de la structure...">
 
         <form id="filters">
             <label for="filter-select">Filtrer</label>
