--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -101,13 +101,19 @@ p{
     flex-direction: column;
     justify-content: space-between;
 
-    div{
+    p{
+      margin-bottom: .2rem;
+      font-size: .9rem;
 
-      p{
-        margin-bottom: .5rem;
-        font-size: .9rem;
+      span{
+        font-weight: 600;
+      }
+
+      .status{
+        font-weight: unset;
       }
     }
+
 
   }
 
@@ -262,7 +268,7 @@ p{
 
 /* Style the accordion panel. Note: hidden by default */
 .my-panel {
-  padding: 0 18px;
+  padding: 0 ;
   background-color: white;
   display: none;
   overflow: hidden;
@@ -295,13 +301,16 @@ p{
 
     border: solid 1px lightgray;
     margin: 1rem 0.5rem;
-    min-height: 320px;
-    width: 350px;
-    padding: 1rem;
+    margin-bottom: 0rem;
+    height: 185px;
+    width: 320px;
+    padding: .7rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
+    border-radius: 15px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 
     .structure-title{
@@ -314,7 +323,14 @@ p{
 
       h4{
         font-weight: 600;
+        color: #3585bb;
+        font-size: 1.1rem;
         word-break: break-word;
+        width: 100%;
+        text-align: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
       .title-border{
@@ -328,12 +344,15 @@ p{
       display: flex;
       flex-direction: column;
       justify-content: start;
-      margin: 2rem 1rem;
+      margin: .7rem 1rem;
       height: 40%;
       width: 100%;
 
       p{
-        margin-bottom: .3rem;
+        margin-bottom: .2rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
 
         span{
           font-weight: 600;
@@ -348,6 +367,7 @@ p{
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-top: .4rem;
     }
 
   }
@@ -493,7 +513,7 @@ a{
     right: 0;
 
   }
-
+  /*
   .structures-container .structures-card{
     width: 80%;
     padding: 1rem;
@@ -502,7 +522,7 @@ a{
     min-width: unset;
     max-width: unset;
   }
-
+*/
 
 
 
@@ -601,6 +621,7 @@ a{
 
   .structures-container .structures-card{
     width: 100%;
+    margin: 1rem 0;
   }
   .permissions-div .form-permissions button{
     width: 100%;
