--- a/templates/admin/admin_show_structure.html.twig
+++ b/templates/admin/admin_show_structure.html.twig
@@ -20,17 +20,17 @@
 <div class="main-container">
     <a  class ='return-btn' href="{{ path('app_admin_show_partner', {slug: structure.partner.slug }) }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z"/></svg>
         Retour</a>
-    <h2>Structure - {{ structure.address}} </h2>
+    <h2>{{ structure.partner.name }} - {{ structure.address}} </h2>
 
     <div class="infos-div white-card">
         <div class="info-partner">
-            <h3><span>{{ structure.partner.name }}</span> - {{ structure.address }}</h3>
-            <p>Statut : {% if structure.user.isActive == 1%}<span class="status">activé</span>
+            <h3>Informations de la structure</h3>
+            <p><span>Statut :</span> {% if structure.user.isActive == 1%}<span class="status">activé</span>
                 {% elseif structure.user.isActive == 0%}<span class="status">désactivé</span>
                 {% endif %}</p>
-            <p>Adresse : {{ structure.address }} {{ structure.zipcode }} - {{ structure.city }}</p>
-            <p>Email : {{ structure.user.email }}</p>
-            <p>Partenaire : Fitness Club - {{ structure.partner.name }}</p>
+            <p><span>Adresse :</span> {{ structure.address }} {{ structure.zipcode }} - {{ structure.city }}</p>
+            <p><span>Email :</span> {{ structure.user.email }}</p>
+            <p><span>Partenaire :</span> Fitness Club - {{ structure.partner.name }}</p>
         </div>
         <div class="partner-btns">
             {% if structure.user.isActive == true %}
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="permissions-div white-card">
-        <h3>Permissions structure</h3>
+        <h3>Permissions de la structure</h3>
         <div class="form-permissions">
             <form id="permissions-modification" class="container" method="post">
                 {{ form_start(structurePermissionsForm) }}
