--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -11,6 +11,7 @@
 {% endblock%}
 
 {% block javascripts %}
+    {{ parent() }}
     {{ encore_entry_script_tags('adminNavBar') }}
     {{ encore_entry_script_tags('panel') }}
 {% endblock%}
