--- a/templates/admin/admin_new_partner.html.twig
+++ b/templates/admin/admin_new_partner.html.twig
@@ -9,6 +9,7 @@
 {% endblock%}
 
 {% block javascripts %}
+    {{ parent() }}
     {{ encore_entry_script_tags('adminNavBar') }}
     {{ encore_entry_script_tags('formAdd') }}
 {% endblock%}
