--- a/templates/admin/admin_show_structure.html.twig
+++ b/templates/admin/admin_show_structure.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Structure{% endblock %}
+{% block title %}Fitness Club - {{ structure.address }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -10,6 +10,7 @@
 {% endblock%}
 
 {% block javascripts %}
+    {{ parent() }}
     {{ encore_entry_script_tags('adminNavBar') }}
     {{ encore_entry_script_tags('structure') }}
 {% endblock%}
