--- a/assets/styles/unverified.scss
+++ b/assets/styles/unverified.scss
@@ -128,6 +128,7 @@ th{
   .td-cell{
     vertical-align: middle;
     word-break: break-word;
+    font-size: .8rem;
 
     a{
       font-size: smaller;
