--- a/templates/admin/admin_show_partner.html.twig
+++ b/templates/admin/admin_show_partner.html.twig
@@ -12,147 +12,140 @@
     {{ parent() }}
     {{ encore_entry_script_tags('adminNavBar') }}
     {{ encore_entry_script_tags('partner') }}
-    {{ encore_entry_script_tags('bootstrap') }}
 {% endblock%}
 
 {% block body %}
     {% include 'Partials/_admin_navBar.html.twig' %}
+    <div class="main-container">
+        <a  class ='return-btn' href="{{ path('app_admin_show_partners') }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z"/></svg>
+            Retour</a>
+        <h2>Fitness Club - {{ partner.name}} </h2>
 
-<div class="main-container">
-
-    <a  class ='return-btn' href="{{ path('app_admin_show_partners') }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z"/></svg>
-        Retour</a>
-    <h2>Fitness Club - {{ partner.name}} </h2>
-
-    <div class="infos-div white-card">
-        <div class="info-partner">
-            <h3>Informations du partenaire</h3>
-            <div>
-                <p><span>Statut :</span> {% if partner.user.isActive == 1%}<span class="status">activé</span>
-                    {% elseif partner.user.isActive == 0%}<span class="status">désactivé</span>
-                    {% endif %}</p>
-            <p><span>Nom du partenaire :</span> {{ partner.name }}</p>
-            <p><span>Adresse email :</span> {{ partner.user.email }}</p>
-            <p><span>Nombre de structures :</span> {{ partner.structures|length }}</p>
+        <div class="infos-div white-card">
+            <div class="info-partner">
+                <h3>Informations du partenaire</h3>
+                <div>
+                    <p><span>Statut :</span> {% if partner.user.isActive == 1%}<span class="status">activé</span>
+                        {% elseif partner.user.isActive == 0%}<span class="status">désactivé</span>
+                        {% endif %}</p>
+                    <p><span>Nom du partenaire :</span> {{ partner.name }}</p>
+                    <p><span>Adresse email :</span> {{ partner.user.email }}</p>
+                    <p><span>Nombre de structures :</span> {{ partner.structures|length }}</p>
+                </div>
+            </div>
+            <div class="partner-btns">
+                {% if partner.user.isActive == true %}
+                    <button type="button" class="bouton bouton-rouge btn-confirm" id="status-modal" >Désactiver</button>
+                {% elseif partner.user.isActive == false %}
+                    <button type="button" class="bouton bouton-vert" id="status-modal" >Activer</button>
+                {% endif %}
+                <button class="bouton bouton-rouge-b btn-delete">Supprimer</button>
             </div>
         </div>
-        <div class="partner-btns">
-        {% if partner.user.isActive == true %}
-            <button type="button" class="bouton bouton-rouge btn-confirm" id="status-modal" >Désactiver</button>
-        {% elseif partner.user.isActive == false %}
-            <button type="button" class="bouton bouton-vert" id="status-modal" >Activer</button>
-        {% endif %}
-        <a href="#" class="bouton bouton-rouge-b">Supprimer</a>
-        </div>
-    </div>
-
-    <div class="permissions-div white-card">
-
-        <h3>Permissions globales</h3>
-        <div class="form-permissions">
-            <form id="permissions-modify" class="container" method="post">
-        {{ form_start(partnerPermissionsForm) }}
-        {{ form_row(partnerPermissionsForm.permissions.newsletter) }}
-        {{ form_row(partnerPermissionsForm.permissions.planning_management) }}
-        {{ form_row(partnerPermissionsForm.permissions.drink_sales) }}
-        {{ form_row(partnerPermissionsForm.permissions.video_courses) }}
-        {{ form_row(partnerPermissionsForm.permissions.prospect_reminders) }}
-        {{ form_row(partnerPermissionsForm.permissions.sponsorship) }}
-        {{ form_row(partnerPermissionsForm.permissions.free_wifi) }}
-        {{ form_row(partnerPermissionsForm.permissions.flexible_hours) }}
-                <button type="submit" class="btn" id="submit-form">Enregistrer les modifications</button>
-        {{ form_end(partnerPermissionsForm) }}
-            </form>
-            <button type="button" class="bouton bouton-bleu btn-confirm" id="open-modal" >Enregistrer les modifications</button>
-        </div>
-    </div>
-    <!-- Modal modification des permissions-->
-    <div id="confirm-modal" class="confirm-modal">
-        <!-- Contenu de la modal -->
-        <div class="modal-buttons">
-            <div class="closing">
-                <h4>Modification des permissions</h4>
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="md-closing bi bi-x" viewBox="0 0 16 16">
-                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                </svg>
-            </div>
-            <div class="modal-p">
-            <p>Etes-vous sûr de vouloir modifier les permissions globales du partenaire? </p>
-            </div>
-            <div class="modal-buttons-div">
-                <button class="bouton bouton-bleu-b cancel-mod">Annuler</button>
-                <button class="bouton bouton-bleu btn-confirm" id="confirm-btn">Confirmer</button>
+        <div class="permissions-div white-card">
+            <h3>Permissions globales</h3>
+            <div class="form-permissions">
+                <form id="permissions-modify" class="container" method="post">
+                {{ form_start(partnerPermissionsForm) }}
+                {{ form_row(partnerPermissionsForm.permissions.newsletter) }}
+                {{ form_row(partnerPermissionsForm.permissions.planning_management) }}
+                {{ form_row(partnerPermissionsForm.permissions.drink_sales) }}
+                {{ form_row(partnerPermissionsForm.permissions.video_courses) }}
+                {{ form_row(partnerPermissionsForm.permissions.prospect_reminders) }}
+                {{ form_row(partnerPermissionsForm.permissions.sponsorship) }}
+                {{ form_row(partnerPermissionsForm.permissions.free_wifi) }}
+                {{ form_row(partnerPermissionsForm.permissions.flexible_hours) }}
+                        <button type="submit" class="btn" id="submit-form">Enregistrer les modifications</button>
+                {{ form_end(partnerPermissionsForm) }}
+                </form>
+                <button type="button" class="bouton bouton-bleu btn-confirm" id="open-modal" >Enregistrer les modifications</button>
             </div>
         </div>
-    </div>
-
-    <!-- Modal activation et désactivation des comptes-->
-    <div id="activate-modal" class="confirm-modal">
-        <!-- Contenu de la modal -->
-        <div class="modal-buttons">
-            {% if partner.user.isActive == true %}
+        {# Modal modification des permissions #}
+        <div id="confirm-modal" class="confirm-modal">
+            {# Contenu de la modal #}
+            <div class="modal-buttons">
                 <div class="closing">
-                    <h4>Désactiver le partenaire</h4>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="ac-closing bi bi-x" viewBox="0 0 16 16">
+                    <h4>Modification des permissions</h4>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="md-closing bi bi-x" viewBox="0 0 16 16">
                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
                 </div>
                 <div class="modal-p">
-                    <p>Etes-vous sûr de vouloir désactiver ce partenaire? </p>
+                <p>Etes-vous sûr de vouloir modifier les permissions globales du partenaire? </p>
                 </div>
                 <div class="modal-buttons-div">
-                    <button class="bouton bouton-bleu-b cancel-btn">Annuler</button>
-                    <a href="{{ path('app_admin_enable_user', {id: partner.user.id }) }}" class="bouton bouton-bleu btn-confirm">Confirmer</a>
+                    <button class="bouton bouton-bleu-b cancel-mod">Annuler</button>
+                    <button class="bouton bouton-bleu btn-confirm" id="confirm-btn">Confirmer</button>
                 </div>
-            {% elseif partner.user.isActive == false %}
-                <div class="closing">
-                <h4>Activer le partenaire</h4>
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="ac-closing bi bi-x" viewBox="0 0 16 16">
-                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                </svg>
-                </div>
-                <div class="modal-p">
-                    <p>Etes-vous sûr de vouloir activer le partenaire? </p>
-                </div>
-                <div class="modal-buttons-div">
-                    <button class="bouton bouton-bleu-b cancel-btn">Annuler</button>
-                    <a href="{{ path('app_admin_enable_user', {id: partner.user.id }) }}" class="bouton bouton-bleu">Confirmer</a>
-                </div>
-            {% endif %}
-        </div>
-    </div>
-
-    <div class="structures-div white-card" id="my-accordion">
-        <button class="my-accordion">
-            <span>Structures</span>
-            <svg xmlns="http://www.w3.org/2000/svg"  width="22" height="22" fill="#225577" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"/></svg>
-        </button>
-        <div class="my-panel">
-            {% if structures|length >= 1 %}
-            <p class="structures-nb">Nombre de structures : {{ structures|length }}</p>
-            <div class="structures-container">
-                {% for structure in structures %}
-                    <div class="structures-card">
-                        <div class="structure-title">
-                            <h4>{{ structure.address }}</h4>
-                            <div class="title-border"></div>
-                        </div>
-                        <div class="structure-info">
-                        <p><span>Adresse :</span> {{ structure.address }}</p>
-                        <p><span>Code postal :</span> {{ structure.zipcode }}</p>
-                        <p><span>Ville :</span> {{ structure.city }}</p>
-                        </div>
-                        <div class="structure-btn">
-                        <a href="{{ path('app_admin_show_structure', {slug: structure.slug }) }}" class="bouton bouton-bleu btn-confirm">
-                            Voir la fiche</a>
-                        </div>
-                    </div>
-                {% endfor %}
             </div>
-            {% else %}
-            <p class="structures-none">Ce partenaire ne possède pas de structure.</p>
-            {% endif %}
+        </div>
+        {# Modal activation et désactivation des comptes #}
+        <div id="activate-modal" class="confirm-modal">
+            {# Contenu de la modal  #}
+            <div class="modal-buttons">
+                {% if partner.user.isActive == true %}
+                    <div class="closing">
+                        <h4>Désactiver le partenaire</h4>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="ac-closing bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                    </div>
+                    <div class="modal-p">
+                        <p>Etes-vous sûr de vouloir désactiver ce partenaire? </p>
+                    </div>
+                    <div class="modal-buttons-div">
+                        <button class="bouton bouton-bleu-b cancel-btn">Annuler</button>
+                        <a href="{{ path('app_admin_enable_user', {id: partner.user.id }) }}" class="bouton bouton-bleu btn-confirm">Confirmer</a>
+                    </div>
+                {% elseif partner.user.isActive == false %}
+                    <div class="closing">
+                    <h4>Activer le partenaire</h4>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="ac-closing bi bi-x" viewBox="0 0 16 16">
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                    </div>
+                    <div class="modal-p">
+                        <p>Etes-vous sûr de vouloir activer le partenaire? </p>
+                    </div>
+                    <div class="modal-buttons-div">
+                        <button class="bouton bouton-bleu-b cancel-btn">Annuler</button>
+                        <a href="{{ path('app_admin_enable_user', {id: partner.user.id }) }}" class="bouton bouton-bleu">Confirmer</a>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+        <div class="structures-div white-card" id="my-accordion">
+            <button class="my-accordion">
+                <span>Structures</span>
+                <svg xmlns="http://www.w3.org/2000/svg"  width="22" height="22" fill="#225577" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"/></svg>
+            </button>
+            <div class="my-panel">
+                {% if structures|length >= 1 %}
+                    <p class="structures-nb">Nombre de structures : {{ structures|length }}</p>
+                    <div class="structures-container">
+                        {% for structure in structures %}
+                            <div class="structures-card">
+                                <div class="structure-title">
+                                    <h4>{{ structure.address }}</h4>
+                                    <div class="title-border"></div>
+                                </div>
+                                <div class="structure-info">
+                                <p><span>Adresse :</span> {{ structure.address }}</p>
+                                <p><span>Code postal :</span> {{ structure.zipcode }}</p>
+                                <p><span>Ville :</span> {{ structure.city }}</p>
+                                </div>
+                                <div class="structure-btn">
+                                <a href="{{ path('app_admin_show_structure', {slug: structure.slug }) }}" class="bouton bouton-bleu btn-confirm">
+                                    Voir la fiche</a>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    <p class="structures-none">Ce partenaire ne possède pas de structure.</p>
+                {% endif %}
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
