--- a/templates/admin/admin_show_structure.html.twig
+++ b/templates/admin/admin_show_structure.html.twig
@@ -22,7 +22,6 @@
     <a  class ='return-btn' href="{{ path('app_admin_show_partner', {slug: structure.partner.slug }) }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z"/></svg>
         Retour</a>
     <h2>{{ structure.partner.name }} - {{ structure.address}} </h2>
-
     <div class="infos-div white-card">
         <div class="info-partner">
             <h3>Informations de la structure</h3>
@@ -41,7 +40,7 @@
                 <button type="button" class="bouton bouton-vert" id="status-modal" >Activer</button>
 
             {% endif %}
-            <a href="#" class="bouton bouton-rouge-b">Supprimer</a>
+            <button class="bouton bouton-rouge-b btn-delete">Supprimer</button>
         </div>
     </div>
     <div class="permissions-div white-card">
@@ -64,9 +63,7 @@
             <button type="button" class="bouton bouton-bleu btn-confirm" id="open-str-modal" >Enregistrer les modifications</button>
         </div>
     </div>
-    <!-- The Modal -->
     <div id="confirm-str-modal" class="confirm-modal">
-        <!-- Modal content -->
         <div class="modal-buttons">
             <div class="closing">
                 <h4>Modification des permissions</h4>
@@ -84,7 +81,6 @@
         </div>
     </div>
     <div id="activate-modal" class="confirm-modal">
-        <!-- Contenu de la modal -->
         <div class="modal-buttons">
             {% if structure.user.isActive == true %}
                 <div class="closing">
