--- a/templates/partner/partner.html.twig
+++ b/templates/partner/partner.html.twig
@@ -10,6 +10,7 @@
 {% endblock%}
 
 {% block javascripts %}
+    {{ parent() }}
     {{ encore_entry_script_tags('read') }}
     {{ encore_entry_script_tags('navBar') }}
 
@@ -18,7 +19,6 @@
 {% include 'Partials/_navBar.html.twig' %}
     {% if is_granted('ROLE_PARTNER') %}
         <div class="main-container">
-            {% if partner.user.isActive == true %}
             <div class="main-content-div">
                 <div class="main-content">
                     <svg class="gym-logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M112 96c0-17.7 14.3-32 32-32h16c17.7 0 32 14.3 32 32V224v64V416c0 17.7-14.3 32-32 32H144c-17.7 0-32-14.3-32-32V384H64c-17.7 0-32-14.3-32-32V288c-17.7 0-32-14.3-32-32s14.3-32 32-32V160c0-17.7 14.3-32 32-32h48V96zm416 0v32h48c17.7 0 32 14.3 32 32v64c17.7 0 32 14.3 32 32s-14.3 32-32 32v64c0 17.7-14.3 32-32 32H528v32c0 17.7-14.3 32-32 32H480c-17.7 0-32-14.3-32-32V288 224 96c0-17.7 14.3-32 32-32h16c17.7 0 32 14.3 32 32zM416 224v64H224V224H416z"/></svg>
@@ -43,27 +43,50 @@
                             <ul>
                                 {% if permissions.newsletter  == 1 %}
                                     <li>Envoi de la Newsletter</li>
+                                {% elseif permissions.newsletter  == 0 %}
+                                    <li class="not-granted">Envoi de la Newsletter</li>
                                 {% endif %}
+
                                 {% if permissions.planningManagement  == 1 %}
                                     <li>Gestion des plannings</li>
+                                {% elseif permissions.planningManagement  == 0 %}
+                                        <li class="not-granted">Gestion des plannings</li>
                                 {% endif %}
+
                                 {% if permissions.drinkSales  == 1 %}
                                     <li>Vente de boissons</li>
+                                {% elseif permissions.drinkSales  == 0 %}
+                                    <li class="not-granted">Vente de boissons</li>
                                 {% endif %}
+
                                 {% if permissions.videoCourses  == 1 %}
                                     <li>Accès aux cours vidéos</li>
+                                {% elseif permissions.videoCourses  == 0 %}
+                                        <li class="not-granted">Accès aux cours vidéos</li>
                                 {% endif %}
+
                                 {% if permissions.prospectReminders  == 1 %}
-                                    <li>Relance des prospects</li>
+                                    <li >Relance des prospects</li>
+                                {% elseif permissions.prospectReminders  == 0 %}
+                                        <li class="not-granted" >Relance des prospects</li>
                                 {% endif %}
+
                                 {% if permissions.sponsorship  == 1 %}
                                     <li>Parrainage</li>
+                                {% elseif permissions.sponsorship  == 0 %}
+                                    <li class="not-granted">Parrainage</li>
                                 {% endif %}
+
                                 {% if permissions.freeWifi  == 1 %}
                                     <li>Wifi gratuit</li>
+                                {% elseif permissions.freeWifi  == 0 %}
+                                    <li class="not-granted">Wifi gratuit</li>
                                 {% endif %}
+
                                 {% if permissions.flexibleHours  == 1 %}
                                     <li>Flexibilité des horaires</li>
+                                {% elseif permissions.flexibleHours  == 0 %}
+                                    <li class="not-granted">Flexibilité des horaires</li>
                                 {% endif %}
                             </ul>
                         </div>
@@ -80,6 +103,11 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" class="arrow-down" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                                 </div>
                                 <div class="structure-content">
+                                    <div>
+                                        <h4>Statut</h4>
+                                        <p>{% if structure.user.isIsActive == 1 %}Activée
+                                        {% elseif structure.user.isIsActive == 0 %}Désactivée{% endif %}</p>
+                                    </div>
                                     <div>
                                         <h4>Email du gérant</h4>
                                         <p>{{ structure.user.email }}</p>
@@ -122,24 +150,9 @@
                             {% endfor %}
                             </div>
                         </div>
-                        {#
-                        <div>
-                            <h4><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-                                </svg> Permissions globales</h4>
-
-                        </div>
-                        #}
                     </div>
                 </div>
             </div>
-        {% elseif partner.user.isActive == false %}
-            <div class="disabled-div">
-                <h2>Fitness Club<br>{{ partner.name }}</h2>
-                <p>Votre compte a été désactivé.</p>
-                <p>Pour en savoir plus, contactez votre gestionnaire.</p>
-            </div>
-        {% endif %}
         </div>
-    {% endif%}
+    {% endif %}
 {% endblock %}
