--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,24 +23,25 @@
             <form method="post">
                 {% if error %}
                     <div class="flash-danger-messages flash-el-danger">
-                        <div class="flash-message-danger"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#e74c3c" class="bi bi-exclamation-circle-fill" viewBox="0 0 16 16">
-                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                                </svg></div>
+                        <div class="flash-message-danger">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#e74c3c" class="bi bi-exclamation-circle-fill" viewBox="0 0 16 16">
+                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+                            </svg>
+                        </div>
                         <p class="flash-danger-content flash-el-danger">
                             {{ error.messagekey|trans(error.messageData,  'security') }}
                         </p>
-                        <div class="flash-message-close flash-el-danger"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000000" class="bi bi-x" viewBox="0 0 16 16">
+                        <div class="flash-message-close flash-el-danger">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#000000" class="bi bi-x" viewBox="0 0 16 16">
                                 <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                            </svg></div>
+                            </svg>
+                        </div>
                     </div>
-
-                   {#  <div class="alert alert-danger">Identifiants invalides</div>#}
                 {% endif %}
 
-
                 {% if app.user %}
-                    <div class="mb-3">
-                        Vous êtes connecté(e) en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                    <div class="mb-3" style="font-size: 0.9rem; text-align: center;">
+                        Vous êtes connecté(e) en tant que {{ app.user.userIdentifier }},<br> <a href="{{ path('app_logout') }}">Se déconnecter</a>
                     </div>
                 {% endif %}
 
@@ -76,7 +77,6 @@
                 <button class="mainForm-btn" type="submit">
                     Se connecter
                 </button>
-
                 <a href="{{ path('app_reset_pass') }}" class="reset-pass">Mot de passe oublié?</a>
             </form>
         </div>
