--- a/assets/styles/unverified.scss
+++ b/assets/styles/unverified.scss
@@ -130,8 +130,8 @@ th{
     word-break: break-word;
     font-size: .8rem;
 
-    a{
-      font-size: smaller;
+    .btn{
+      font-size: .8rem;
     }
   }
 
