--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -138,22 +138,20 @@ p{
 }
 
 
-
-/* The Modal (background) */
 .confirm-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
+
 .modal-buttons {
   background-color: #fefefe;
   margin: 50vh auto;
@@ -226,7 +224,6 @@ p{
   width: 100%;
 }
 
-/* Style the buttons that are used to open and close the accordion panel */
 .my-accordion {
   cursor: pointer;
   width: 100%;
@@ -251,7 +248,7 @@ p{
 
 }
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+
 .active {
   background-color: white;
   border-bottom: solid 1px lightgray ;
@@ -262,11 +259,7 @@ p{
 
 }
 
-.my-accordion:hover{
 
-}
-
-/* Style the accordion panel. Note: hidden by default */
 .my-panel {
   padding: 0 ;
   background-color: white;
@@ -345,7 +338,7 @@ p{
       flex-direction: column;
       justify-content: start;
       margin: .7rem 1rem;
-      height: 40%;
+      height: 42%;
       width: 100%;
 
       p{
@@ -390,7 +383,6 @@ p{
 
 
   &:hover{
-   // box-shadow: 0 0 10px 2px lightgray;
     color: #2c70a0;
   }
 }
@@ -513,17 +505,6 @@ a{
     right: 0;
 
   }
-  /*
-  .structures-container .structures-card{
-    width: 80%;
-    padding: 1rem;
-    min-height: unset;
-    max-height: unset;
-    min-width: unset;
-    max-width: unset;
-  }
-*/
-
 
 
   .permissions-div{
